ispCP ω 1.0.1 Changelog
~~~~~~~~~~~~~~~~~~~~~~~~~~

2009-07-30 Laurent Declercq
	- CONFIGS:
		* Fixed #1725: /var/log/rkhunter.log not readable

2009-07-29 Laurent Declercq
	- CONFIGS:
		* Fixed AuthOrder: "warning: module 'mod_sql_mysql.c' has no auth handlers"
	- GUI:
		* admin/reseller_statistics.tpl - repositioning of the message

2009-07-28 Laurent Declercq
	- CONFIGS:
		* Fixed #1906: Fatal: AuthOrder: AuthOrder has already been configured 

2009-07-26 Laurent Declercq
	- SETUP:
		* Fixed #1908: ask_vhost subroutine - gethostbyaddr() will always fails

2009-07-23 Laurent Declercq
	- DOCS:
		* Updated Debian INSTALL
	- DAEMON:
		* Fixed warning: "ISO C90 forbids mixed declarations and code" in helo_syntax.c

2009-07-12 Thomas Wacker
	- GUI:
		* Fixed #1505: When downgrading account, give error to user if account is less than current usage

2009-07-10 Malte Geierhos
	- ENGINE:
		* Imported DNS-TimestampFix (thx to "Blondak")
	- GUI:
		* Fix for MANUAL DNS Lines (thx to "Blondak")

2009-07-07 Jochen Manz
	- ENGINE:
		* Fixed #1880: Update ISPCP failed

2009-07-05 Thomas Wacker
	- GUI:
		* Fixed #1500: Subdomain you are trying to remove has ftp & mail alias accounts
		* Added improved domain deletion

2009-07-04 Thomas Wacker
	- TOOLS:
		* Fixed #1878: Updated phpMyAdmin to version 3.2.0.1
	- GUI:
		* Added missing information in order e-mail settings

2009-07-02 Thomas Wacker
	- GUI:
		* Fixed #1860: Patch for domain expire date

2009-06-28 Thomas Wacker
	- GUI:
		* Fixed #1684: Orderpanel needs coverage

2009-06-21 Thomas Wacker
	- CONFIGS:
		* Fixed #1663: controlpanel redirect

2009-06-21 Thomas Wacker
	- GUI:
		* Fixed #1811: Problem with translation string

2009-06-16 Benedikt Heintel
	- TOOLS:
		* Fixed #1869: Updated phpMyAdmin to version 3.2.0

2009-06-15 Thomas Wacker
	- GUI:
		* Fixed #1868: Database update fails

2009-06-13 Thomas Wacker
	- GUI:
		* Added backtrace e-mail to admin in case of SQL error

2009-06-12 Thomas Wacker
	- GUI: